<resources>
    <string name="app_name">my_plant</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="nav_add">Добавить растение</string>
    <string name="nav_main">Главная</string>
    <string name="nav_statistics">Статистика</string>
    <string name="nav_recommend_params">Рекомендуемые</string>
    <string name="nav_manage">Настройки</string>
    <string name="nav_field">Общие</string>
    <string name="nav_choose">Выбрать растение</string>
    <string name="nav_create_params">Создать свои параметры</string>

    <string name="empty_data"></string>
    <string name="txt_humidity">Влажность воздуха</string>
    <string name="value_humidity">%1$d %2$s</string>
    <string name="txt_temperature">Температура</string>
    <string name="value_temperature">%1$d \u2103</string>
    <string name="txt_light">Освещеннось</string>
    <string name="value_light">%1$d %2$s</string>
    <string name="value_freq">%1$d дн.</string>
    <string name="last_refresh_time">Время последнего обновления:</string>
    <string name="last_water_time">Время последнего полива:</string>
    <string name="refresh_button">Обновить</string>

</resources>
