<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.FragmentMain">

    <TextView
        android:id="@+id/txt_empty_main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_margin="4dp"
        android:gravity="center"
        android:text="Нет ни одного растения. Для создания нового профиля растения заполниете форму пункта меню \u00ABДобавить растение\u00BB."
        android:textColor="@android:color/darker_gray"
        android:visibility="gone" />

    <LinearLayout
        android:id="@+id/txt_main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/txt_humidity"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginBottom="10dp"
                    android:layout_weight="10"
                    android:text="@string/txt_humidity"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/value_humidity"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginBottom="10dp"
                    android:layout_weight="3"
                    android:text="@string/value_humidity"
                    android:textSize="18sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/txt_temperature"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginBottom="10dp"
                    android:layout_weight="10"
                    android:text="@string/txt_temperature"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/value_temperature"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginBottom="10dp"
                    android:layout_weight="3"
                    android:text="@string/value_temperature"
                    android:textSize="18sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/txt_light"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginBottom="10dp"
                    android:layout_weight="10"
                    android:text="@string/txt_light"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/value_light"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginBottom="10dp"
                    android:layout_weight="3"
                    android:text="@string/value_light"
                    android:textSize="18sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/txt_last_refresh_time"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginBottom="10dp"
                    android:layout_weight="10"
                    android:text="@string/last_refresh_time"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/value_last_refresh_time"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginBottom="10dp"
                    android:layout_weight="3"
                    android:text="@string/empty_data"
                    android:textSize="18sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/txt_last_water_time"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginBottom="10dp"
                    android:layout_weight="10"
                    android:text="@string/last_water_time"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/value_last_water_time"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginBottom="10dp"
                    android:layout_weight="3"
                    android:text="@string/empty_data"
                    android:textSize="18sp" />
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="5dp">

            <Button
                android:id="@+id/btn_init"
                android:layout_width="130dp"
                android:layout_height="48dp"
                android:gravity="center"
                android:padding="5dp"
                android:text="@string/refresh_button" />


        </LinearLayout>

    </LinearLayout>

</FrameLayout>