<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.FragmentAddType">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/add_type_hint"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:background="@drawable/boarder"
                android:padding="15dp"
                android:text="Для создания сбственного вида растения, необходимо заполнить его стандартные параметры. Введите необходимые параметры ниже."
                android:textColor="@color/colorMainText"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:text="Введи название типа:"
                android:textColor="@color/colorMainText"
                android:textSize="22sp" />

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/edit_collection_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:hint="Название"
                    android:inputType="textPersonName"
                    android:textSize="22sp" />
            </android.support.design.widget.TextInputLayout>

            <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:text="Введи стандартные параметры:"
                android:textColor="@color/colorMainText"
                android:textSize="22sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="10dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="4"
                    android:gravity="bottom"
                    android:text="@string/txt_humidity"
                    android:textSize="18sp" />

                <android.support.design.widget.TextInputLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="4"
                    android:gravity="bottom">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/edit_collection_humidity"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:hint="Влажность"
                        android:inputType="number"
                        android:textSize="22sp" />
                </android.support.design.widget.TextInputLayout>

                <TextView
                    android:id="@+id/textView6"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="3"
                    android:gravity="bottom|right"
                    android:text="20-80%"
                    android:textSize="18sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="10dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView7"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="4"
                    android:gravity="bottom"
                    android:text="@string/txt_temperature"
                    android:textSize="18sp" />

                <android.support.design.widget.TextInputLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="4"
                    android:gravity="bottom">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/edit_collection_temperature"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:hint="@string/txt_temperature"
                        android:inputType="number"
                        android:textSize="22sp" />
                </android.support.design.widget.TextInputLayout>

                <TextView
                    android:id="@+id/textView9"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="3"
                    android:gravity="bottom|right"
                    android:text="0-50\u2103"
                    android:textSize="18sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="10dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView10"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="4"
                    android:gravity="bottom"
                    android:text="@string/txt_light"
                    android:textSize="18sp" />

                <android.support.design.widget.TextInputLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="4"
                    android:gravity="bottom">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/edit_collection_light"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:hint="@string/txt_light"
                        android:inputType="number"
                        android:textSize="22sp" />
                </android.support.design.widget.TextInputLayout>

                <TextView
                    android:id="@+id/textView12"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="3"
                    android:gravity="bottom|right"
                    android:text="\u003C100\u2103"
                    android:textSize="18sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="10dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView13"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="4"
                    android:gravity="bottom"
                    android:text="Частота полива"
                    android:textSize="18sp" />

                <android.support.design.widget.TextInputLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="4"
                    android:gravity="bottom">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/edit_collection_water_period"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:hint="Частота"
                        android:inputType="number"
                        android:textSize="22sp" />
                </android.support.design.widget.TextInputLayout>

                <TextView
                    android:id="@+id/textView15"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="3"
                    android:gravity="bottom|right"
                    android:text="дн."
                    android:textSize="18sp" />
            </LinearLayout>

            <Button
                android:id="@+id/btn_add_type"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="15dp"
                android:padding="15dp"
                android:background="@drawable/whatever"
                android:text="Добавить"
                android:textSize="16sp" />

        </LinearLayout>


    </ScrollView>

</FrameLayout>